# HW_WEB12

./: README.md  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 096831772be3_init.py  686cac570f09_init.py  87289b61e3d2_init.py  d856f00d0fcd_add_roles.py
src/: schemas.py
src/database/: models.py
src/repository/: auth.py  contacts.py  users.py
src/routes/: auth.py  contacts.py  notes.py
src/services/: auth.py
src/templates/: home.html
